Fixing z-index issue

--- a/style.css
+++ b/style.css
@@ -212,14 +212,14 @@ main {
     transition: .3s all cubic-bezier(0.38, -0.03, 0.43, 1.43);
     position: fixed;
     bottom: 0;
-    z-index: 1;
+    z-index: -3;
     transform: translateY(100%);
 }
 
 #zbraaa.show {
     position: fixed;
     bottom: 0;
-    z-index: 1;
+    z-index: 6;
     transform: translateY(0%);
 }
 
@@ -228,7 +228,7 @@ main {
     transition: .3s all cubic-bezier(0.38, -0.03, 0.43, 1.43);
     position: fixed;
     bottom: 0;
-    z-index: 3;
+    z-index: -3;
     transform: translateY(100%);
 }
 
@@ -244,7 +244,7 @@ main {
     transition: .3s all cubic-bezier(0.38, -0.03, 0.43, 1.43);
     position: fixed;
     bottom: 0;
-    z-index: 3;
+    z-index: -3;
     transform: translateY(100%);
 }
 
